After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 694191 - libreoffice regression with g-t-s 3.6.4
libreoffice regression with g-t-s 3.6.4
Status: RESOLVED FIXED
Product: gnome-themes-standard
Classification: Core
Component: Adwaita GTK2 theme
3.6.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-themes-standard-maint
gnome-themes-standard-maint
Depends on:
Blocks:
 
 
Reported: 2013-02-19 17:22 UTC by Edward Sheldrake
Modified: 2013-02-19 19:05 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
screenshot of the problem (7.15 KB, image/png)
2013-02-19 17:22 UTC, Edward Sheldrake
Details
how it looks with g-t-s 3.6.2 (5.01 KB, image/png)
2013-02-19 17:22 UTC, Edward Sheldrake
Details

Description Edward Sheldrake 2013-02-19 17:22:11 UTC
Created attachment 236792 [details]
screenshot of the problem

I noticed a problem with LibreOffice Calc and gnome-themes-standard 3.6.4. As you click different cells in the spreadsheet, the cell name box background becomes increasingly dark, and you can't read the cell name because the letters get drawn over the top of the letters already there.

Similarly, the font name and font size boxes get darker each time you click them.
Comment 1 Edward Sheldrake 2013-02-19 17:22:58 UTC
Created attachment 236793 [details]
how it looks with g-t-s 3.6.2
Comment 2 Cosimo Cecchi 2013-02-19 18:11:04 UTC
Ouch, sorry about that.
This actually also happens in git master, and it was caused by this commit for bug 685712.
I'll push the fix to gnome-3-6 as well and do a 3.6.5 tarball I guess.

commit	12596e2cd0585db73af54d4180065e001d01e67f

gtk2: make it possible to override GtkEntry's backgrounds
Comment 3 Edward Sheldrake 2013-02-19 19:05:29 UTC
The 3.6.5 release seems to work fine.