gtk2: fix regression in drawing LibreOffice/OOo GtkEntry backgrounds

The way GTK theming is done in LibreOffice/OOo doesn't work with
composed transparent images on top of another.
Add a workaround and draw a solid background for the entry in this case.

https://bugzilla.gnome.org/show_bug.cgi?id=694191